src/objects/loan__Consolidated_Loan_Payment_Reversal__c.object
<CustomObject>
    <fields>
        <fullName>loan__Consolidated_Loan_Payment__c</fullName>
        <label>Consolidated Loan Payment</label>
        <referenceTo>loan__Consolidated_Loan_Payment__c</referenceTo>
        <relationshipLabel>Consolidated Loan Payment Reversals</relationshipLabel>
        <relationshipName>Consolidated_Loan_Payment_Reversals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Reason_Code__c</fullName>
        <label>Reason Code</label>
        <picklist>
            <picklistValues>
                <fullName>NSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Consolidated Loan Payment Reversal</label>
    <nameField>
        <displayFormat>CLPRI-{0000000000}</displayFormat>
        <label>Consolidated Loan Payment Reversal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consolidated Loan Payment Reversals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>loan__Existing_Reversal_Transaction</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp;  loan__Consolidated_Loan_Payment__r.loan__Reversed__c</errorConditionFormula>
        <errorMessage>This payment has already been reversed</errorMessage>
    </validationRules>
</CustomObject>